syntax = "proto3";

package chef.automate.api.iam.v2;
option go_package = "github.com/chef/automate/components/automate-gateway/api/iam/v2/common";

enum RuleType {
    RULE_TYPE_UNSET = 0;
    NODE = 1;
    EVENT = 2;
}

enum ConditionAttribute {
    CONDITION_ATTRIBUTE_UNSET = 0;
    CHEF_SERVER = 1;
    CHEF_ORGANIZATION = 2;
    ENVIRONMENT = 3;
    CHEF_ROLE = 4;
    CHEF_TAG = 5;
    CHEF_POLICY_GROUP = 6;
    CHEF_POLICY_NAME = 7;
}

enum ConditionOperator {
    CONDITION_OPERATOR_UNSET = 0;
    MEMBER_OF = 1;
    EQUALS = 2;
}

enum RuleStatus {
    RULE_STATUS_UNSET = 0;
    STAGED = 1;
    APPLIED = 2;
}

enum ProjectRulesStatus {
    PROJECT_RULES_STATUS_UNSET = 0;
    RULES_APPLIED = 1;
    EDITS_PENDING = 2;
    NO_RULES = 3;
}

message Rule {
    string id = 1;
    string project_id = 2;
    string name = 3;
    RuleType type = 4;
    repeated Condition conditions = 5;
    RuleStatus status = 6;
}

message Condition {
    ConditionAttribute attribute = 1;
    repeated string values = 2;
    ConditionOperator operator = 3;
}
